# twsgluum

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac
m4/: sxe-aux.m4  sxe-compiler.m4  sxe-expat.m4  sxe-libev.m4  sxe-libtool.m4  sxe-twsapi.m4
src/: Makefile.am  daemonise.c  daemonise.h  dfp754_d32.h  dfp754_d64.c  dfp754_d64.h  empty-wrapper.cpp  gq.c  gq.h  ibex.c  ibex.yuck  ibfx.c  ibfx.yuck  logger.c  logger.h  mc6-sock.c  nifty.h  ox-tws-clo.ggo  ox-tws.c  ox-tws.h  ox-tws.yuck  pf-tws-clo.ggo  pf-tws.c  pf-tws.h  pf-tws.yuck  pfa.c  pfa.h  proto-fixml-attr.gperf  proto-fixml-attr.h  proto-fixml-tag.gperf  proto-fixml-tag.h  proto-twsxml-attr.gperf  proto-twsxml-attr.h  proto-twsxml-reqtyp.gperf  proto-twsxml-reqtyp.h  proto-twsxml-tag.gperf  proto-twsxml-tag.h  proto-tx-attr.gperf  proto-tx-attr.h  proto-tx-ns.gperf  (+28 more)
